--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.8",
+    "dayjs": "^1.11.13",
     "normalize.css": "^8.0.1",
     "pinia": "^2.2.6",
     "vant": "^4.9.9",
